gcc/testsuite/rust/rustc/ui/parser/shebang/shebang-doc-comment.rs
#!///bin/bash
[allow(unused_variables)]
// { dg-error "" "" { target *-*-* } .-1 }

